# cyberfabric-core

./: CHANGELOG.md  Cargo.toml  Makefile
.cypilot-adapter/: artifacts.json
.github/workflows/: ci.yml
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: main.rs  registered_modules.rs
config/: e2e-local-mysql.yaml  e2e-local-postgres.yaml  e2e-local-windows.yaml  e2e-local.yaml  no-db.yaml  quickstart-windows.yaml  quickstart.yaml
docs/: TOKIO_CONSOLE.md
docs/adrs/modkit/: 0003-modkit-universal-lazy-layer.md
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  DESIGN.md
libs/modkit/: Cargo.toml
libs/modkit/src/: registry.rs
libs/system-sdks/: Cargo.toml
modules/chat_engine/: DESIGN.md  PRD.md
modules/chat_engine/ADR/: 0015-variant-indexing.md  0020-session-metadata.md  0025-session-deletion-strategy.md
modules/chat_engine/api/: http-protocol.json
modules/chat_engine/schemas/: README.md
modules/credstore/: QUICKSTART.md
modules/credstore/credstore/: Cargo.toml
modules/credstore/credstore-sdk/: README.md
modules/credstore/credstore/src/: lib.rs  module.rs
modules/credstore/credstore/src/api/: mod.rs
modules/credstore/credstore/src/api/rest/: dto.rs  error.rs  handlers.rs  mod.rs  routes.rs
modules/credstore/credstore/src/domain/: error.rs  local_client.rs  service.rs
modules/credstore/docs/: DESIGN.md  PRD.md
modules/file-parser/src/: module.rs
modules/file-parser/tests/: path_traversal_tests.rs
modules/mini-chat/docs/: PRD.md  (+1 more)
scripts/: ci.py
testing/docker/: hyperspot.Dockerfile
testing/e2e/: requirements.txt
(+132 files in other folders)
